# sparkcopy

./: LICENSE  README.md  pyproject.toml
src/sparkopy/: __init__.py
