[project]
name = "sparkopy"
version = "0.0.1"
authors = [
  { name="Ryan Duryea", email="aguynamedryan+oss@gmail.com" },
]
description = "Downloads tables from Spark and outputs them as Parquet files"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = [
  "click==8.1.7",
  "grpcio==1.63.0",
  "grpcio-status==1.63.0",
  "pandas==2.2.2",
  "protobuf==5.26.1",
  "pyarrow==16.0.0",
  "pyspark==3.5.1"
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"

[project.scripts]
sparkopy = "sparkopy:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"